# gridtree

./: .gitignore  README.md  bandit.sh  flake8.sh  mypy.sh  pyproject.toml  spelling.sh
gridtree/: __init__.py  gridtree.py
tests/: test_gridtree.py
